manifest/objects/Briefing__c.object
<CustomObject>
    <fields>
        <fullName>ACV__c</fullName>
        <formula>Opportunity__r.Ann_Rec_Rev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Background_Relationship_with_Client__c</fullName>
        <label>Background/Relationship with Client</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Briefing_Id__c</fullName>
        <label>Briefing ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Briefing_Name__c</fullName>
        <label>Briefing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Broker__c</fullName>
        <label>Consultant/Broker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Account.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>Santa Barbara</fullName>
                </value>
                <value>
                    <fullName>Barcelona</fullName>
                    <isActive>false</isActive>
                    <label>Barcelona</label>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                    <isActive>false</isActive>
                    <label>Dallas</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Existing__c</fullName>
        <formula>CASE(
    TEXT(Opportunity__r.Account.Type),
    &apos;Prospect&apos;, &quot;New&quot;,
    &apos;Former Customer&apos;, &quot;New&quot;,
    &quot;Existing&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New/Existing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Briefings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Key_Dates__c</fullName>
        <description>Question, deadline, etc</description>
        <label>Other Key Dates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_Submission_Notes__c</fullName>
        <description>Next step, win/loss etc</description>
        <label>Post-Submission Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Date__c</fullName>
        <inlineHelpText>1 week lead time preferred.</inlineHelpText>
        <label>Preferred Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Products2__c</fullName>
        <label>Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_objectives_for_Briefing__c</fullName>
        <label>Reason/objectives for Briefing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Red_Flags_and_Other_Notes__c</fullName>
        <label>Red Flags and Other Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Time_Zone__c</fullName>
        <label>Request Time Zone</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Status__c</fullName>
        <label>Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <formula>Opportunity__r.Sales_Channels__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesperson_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson (Requestor)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Experience_Center_Briefing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <formula>Opportunity__r.Total_Contract_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Experience Center Briefing Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Event_Meeting_Queue_Briefing</fullName>
        <filterScope>Queue</filterScope>
        <label>Event Meeting Queue</label>
        <queue>Event_Meeting_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ECBR-{0000}</displayFormat>
        <label>Briefing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experience Center Briefing Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>